[package]
name = "from_value"
version = "0.0.0"
authors = ["Wyatt Jacob Herkamp <wherkamp@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.18"
proc-macro2 = "1.0.37"
syn = "1.0.91"
serde_json = "1.0.79"
serde = { version = "1.0.136", features =  ["derive"]  }